# windisplay

./: .gitignore  CHANGELOG.md  CLI_USAGE.md  LICENSE  README.md  WinDisplay.spec  increment_version.py  main.py  package-lock.json  package.json  pyinstaller.spec  pyproject.toml  test.py
.cursor/rules/: main.mdc
.github/workflows/: release.yml
installer/: windisplay.iss
keys/: windisplay.key.pub
scripts/: incrementVersion.mjs  test-build.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  display_monitor.rs  displays.rs  fakeDisplays.rs  hotkeys.rs  lib.rs  main.rs  positioning.rs  settings.rs  winDisplays.rs  winHdr.rs
src/components/: BrightnessSlider.tsx  HdrToggle.tsx  IdentifyMonitorsButton.tsx  InputSourceSelector.tsx  MonitorControls.tsx  OrientationTextToggle.tsx  PowerToggle.tsx  RefreshRateSlider.tsx  ResolutionSelect.tsx  ResolutionSlider.tsx  ScaleSlider.tsx
src/components/About/: About.css  About.tsx
src/components/Settings/: CheckUpdatesButton.tsx  Settings.css  Settings.tsx
src/components/ui/Dialog/: Dialog.css  Dialog.tsx
src/components/ui/ErrorToast/: ErrorToast.css  ErrorToast.tsx
src/components/ui/Link/: Link.tsx
src/components/ui/PagedSelect/: PagedSelect.css  PagedSelect.tsx
src/components/ui/Selector/: Selector.css  Selector.tsx
src/components/ui/Slider/: Slider.css  Slider.tsx
src/components/ui/Slider/icons/: BrightnessIcon.tsx  ResolutionIcon.tsx
src/components/ui/TextToggle/: TextToggle.css  TextToggle.tsx
src/components/ui/icons/: ArrowIcons.tsx  BrightnessIcon.tsx  CogIcon.tsx  DisplayOrientationIcon.tsx  HdrIcon.css  HdrIcon.tsx  InputIcons.tsx  MonitorIcon.tsx  PowerIcon.tsx  RefreshRateIcon.tsx  ResolutionIcon.tsx  RotateIcons.tsx  ScaleIcon.tsx  SearchIcon.tsx  SectionIcon.tsx
src/context/: MonitorsContext.tsx
src/hooks/: useDebouncedCallback.ts  useMonitorsMutation.ts  useSettings.ts
src/lib/: Resolutions.ts
windisplay/: __init__.py  __main__.py  win_display.py
