[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "windisplay"
version = "0.1.5"
description = "Windows tray app to switch display resolutions across multiple monitors."
requires-python = ">=3.8"
dependencies = [
  "pystray",
  "Pillow",
  "pywin32",
  "pyinstaller>=6.15.0",
]

[project.scripts]
windisplay = "windisplay.win_display:main"

[tool.setuptools]
packages = ["windisplay"]

[tool.uv]
dev-dependencies = []
