[package]
name = "windisplay"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windisplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
window-vibrancy = "0.6"
windows = { version = "0.56", features = [
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_Devices_Display",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
] }
tauri-plugin-opener = "2"

[features]
default = []
# Use a fake displays provider instead of the platform implementation
fake-displays = []

