[package]
name = "WinDisplay"
version = "0.3.18"
description = "Like BetterDisplay, but for Windows. Change resolution and refresh rate of your monitors from your system tray."
authors = ["zpix1"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windisplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cfg-if = "1"
clap = { version = "4.5", features = ["derive"] }
window-vibrancy = "0.6"
windows = { version = "0.56", features = [
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_Devices_Display",
  "Win32_System_Console",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
log = "0.4"
tauri-plugin-store = "2"
global-hotkey = "0.7"
tauri-plugin-process = "2"

[features]
default = []
# Use a fake displays provider instead of the platform implementation
fake-displays = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

